--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="subheader">More</string>
     <string name="action_signup">Sign up</string>
     <string name="action_login">Login</string>
+    <string name="action_logout">Log out</string>
 
 
     <string name="bssmenu_buy">BUY</string>
@@ -57,6 +58,10 @@
     <!--Login-->
     <string name="login_name">Email or Phone</string>
     <string name="btn_login">LOGIN</string>
-    <string name="err_msg_name">Enter your full name or email</string>
+    <string name="err_msg_name">Enter your phone number or email</string>
+    <string name="err_msg_name_only">Enter your full name</string>
     <string name="err_msg_password">Enter the password</string>
+    <string name="err_msg_password_mismatch">Password confirmation does not match password !</string>
+    <string name="err_msg_phone">Enter your phone number</string>
+    <string name="err_msg_email">Enter valid email address</string>
 </resources>
