--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
     <string name="hint_address1">Address 1</string>
     <string name="hint_address2">Address 2</string>
     <string name="hint_address3">Address 3</string>
+    <string name="label_role_setting">Role Setting</string>
+    <string name="hint_comName">Company Name</string>
+    <string name="hint_comProfile">Company Profile</string>
+    <string name="hint_comWebsite">Company Website</string>
+    <string name="hint_comPhone">Office Phone</string>
+    <string name="hint_comProduct">Company Product</string>
 </resources>
