--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,11 @@
     <string name="action_signup">Sign up</string>
     <string name="action_login">Login</string>
     <string name="action_logout">Log out</string>
-    <string name="action_accountsetting">Account Setting</string>
+    <string name="action_accountsetting">Account</string>
 
 
-    <string name="bssmenu_buy">BUY</string>
-    <string name="bssmenu_share">SHARE</string>
-    <string name="bssmenu_sell">SELL</string>
+    <string name="bssmenu_buy">Join a deal</string>
+    <string name="bssmenu_sell">Find opportunity</string>
 
 
     <string name="buymenu_display">Product</string>
@@ -83,4 +82,7 @@
     <string name="hint_comProduct">Company Product</string>
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
+
+    <!--QR code reader-->
+    <string name="scan_text">Align the QR Code within the frame to scan</string>
 </resources>
