--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="action_login">Login</string>
     <string name="action_logout">Log out</string>
     <string name="action_accountsetting">Account</string>
+    <string name="action_help">Help</string>
 
 
     <string name="bssmenu_buy">Join a deal</string>
