--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,14 +48,14 @@
     <!--Sign up-->
     <string name="hint_name">Full Name</string>
     <string name="hint_email">Email</string>
-    <string name="hint_phone">Phone</string>
+    <string name="hint_phone">Mobile</string>
     <string name="hint_verify_code">Verification Code</string>
     <string name="hint_password">Password</string>
     <string name="btn_sign_up">SIGN UP</string>
     <string name="btn_verify">NEXT</string>
     <string name="btn_confirm">VERIFY</string>
-    <string name="btn_link_to_login">Already Registered! Login</string>
-    <string name="btn_link_to_register">Not Registered? Sign up now.</string>
+    <string name="btn_link_to_login">Already Registered! <u>Login</u>.</string>
+    <string name="btn_link_to_register">Not Registered?  <u>Sign up</u> now.</string>
     <string name="title_signup_phone">Sign Up with Phone</string>
     <string name="title_signup_email">Sign Up with Email</string>
 
@@ -83,6 +83,8 @@
     <string name="hint_comProduct">Company Product</string>
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
+    <string name="radio_individual">Individual</string>
+    <string name="radio_company">Company</string>
 
     <!--QR code reader-->
     <string name="scan_text">Align the QR Code within the frame to scan</string>
