--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="sellmenu_selling">Selling</string>
     <string name="sellmenu_scheduled">Scheduled</string>
-    <string name="sellmenu_add">Add</string>
+    <string name="sellmenu_add">Add item</string>
     <string name="sellmenu_bulk">Bulk</string>
 
 
