--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="action_accountsetting">Account</string>
     <string name="label_accountsetting">Account Setting</string>
     <string name="action_help">Help</string>
-
+    <string name="cannot_connect_server">The server cannot be connected</string>
+    <string name="loading">Loading</string>
 
     <string name="bssmenu_buy">Join a deal</string>
     <string name="bssmenu_sell">Find opportunity</string>
